fix: card alignment with title for cat post block on large desktop varients

--- a/tailwind/custom/category-posts.css
+++ b/tailwind/custom/category-posts.css
@@ -15,7 +15,9 @@
 }
 
 .category-posts.post-wrapper {
-	max-width: 1320px !important;
+	@apply xl:max-w-[1320px] min-[1800px]:max-w-[1500px] min-[2000px]:max-w-[1600px] min-[2200px]:max-w-[1700px] min-[2400px]:max-w-[1800px];;
+
+	/* max-width: 1320px !important; */
 }
 
 .wp-block-heading.eyebrows {
