--- a/tailwind/custom/fifty-fifty-block.css
+++ b/tailwind/custom/fifty-fifty-block.css
@@ -40,3 +40,11 @@
 img.wp-image-20341.size-full.webpexpress-processed {
     margin: 0;
 }
+
+.wp-block-media-text.has-media-on-the-right {
+    grid-template-columns: none;
+    @media (min-width: 1200px) {
+        grid-template-columns: 1fr 50%;
+    }
+    
+}
